# AI-Conversation-Simulator

./: README.md  pyproject.toml
src/: .env.example  main.py
src/database/: db_manager.py
src/static/css/: style.css
src/static/js/: app.js
src/templates/: index.html
