[tool.poetry]
name = "ai-conversation"
version = "0.1.0"
description = "AI-to-AI conversation simulator"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-socketio = "^5.3.4"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
openai = "^1.1.1"
eventlet = "^0.33.3"
tiktoken = "^0.5.1"
cachetools = "^5.3.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
